--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </div>
         </div>
         <div>
-            <p class="titulo" style= "padding-top: 14px;">CONVIERTETE EN UN</p>
-            <p class="titulo" style= "font-size: 50px; padding-bottom: 5px;">ORADOR</p>
+            <p class="titulo" style= "padding-top: 10px;">VENTA</p>
+            <p class="titulo" style= "font-size: 50px; padding-bottom: 5px;">VALOR DE TICKET $200</p>
             <p class="titulo" style="padding-bottom: 5px;">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
             <div class="row">
                 <div class="col">
@@ -92,9 +92,6 @@
                 <button type="button" class="btn btn-success btn-lg btn-block">ENVIAR</button>
             </div>
         </div>
-    </section>
-    <section class="container-fluid">
-
     </section>
     <footer class="container-fluid" style="padding: 15px 0 0 0;">
         <ul class="nav">
